==> alireza-ansaripour/UWB-concurrent/platform/port.c <==
#include "sleep.h"
#include "port.h"
#include "stm32l4xx_hal.h"
#include "stm32_hal_legacy.h"
#include "stm32l4xx_hal_conf.h"
#include "stm32l4xx_hal_rcc.h"
#include "stm32l4xx_hal_rcc_ex.h"
#define rcc_init(x)					RCC_Configuration(x)
#define systick_init(x)				SysTick_Configuration(x)
#define interrupt_init(x)			NVIC_Configuration(x)
#define usart_init(x)				USART_Configuration(x)
#define spi_init(x)					SPI_Configuration(x)
#define gpio_init(x)				GPIO_Configuration(x)
#define usb_init(x)					USB_Configuration(x)

int SPI_Configuration(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

	HAL_SPI_DeInit(&SPIx_Handle);

	// SPIx Mode setup
	SPIx_Handle.Instance = SPIx;
	SPIx_Handle.Init.Direction = SPI_DIRECTION_2LINES;
	SPIx_Handle.Init.Mode = SPI_MODE_MASTER;
	SPIx_Handle.Init.DataSize = SPI_DATASIZE_8BIT;
	SPIx_Handle.Init.CLKPolarity = SPI_POLARITY_LOW;
	SPIx_Handle.Init.CLKPhase = SPI_PHASE_1EDGE;
	SPIx_Handle.Init.NSS = SPI_NSS_SOFT;
	SPIx_Handle.Init.BaudRatePrescaler = SPIx_PRESCALER;
	SPIx_Handle.Init.FirstBit = SPI_FIRSTBIT_MSB;
	SPIx_Handle.Init.CRCPolynomial = 7;
	SPIx_Handle.Init.CRCLength = SPI_CRC_LENGTH_8BIT;
	SPIx_Handle.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
	SPIx_Handle.Init.NSSPMode = SPI_NSS_PULSE_DISABLE;
	SPIx_Handle.Init.TIMode = SPI_TIMODE_DISABLE;

	HAL_SPI_Init(&SPIx_Handle);

	// SPIx SCK pin setup
	GPIO_InitStructure.Pin = SPIx_SCK;
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	GPIO_InitStructure.Alternate = SPIx_SCK_AF;

	HAL_GPIO_Init(SPIx_GPIO, &GPIO_InitStructure);

	// SPIx MOSI pin setup
	GPIO_InitStructure.Pin = SPIx_MOSI;
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	GPIO_InitStructure.Alternate = SPIx_MOSI_AF;

	HAL_GPIO_Init(SPIx_GPIO, &GPIO_InitStructure);

	// SPIx MISO pin setup
	GPIO_InitStructure.Pin = SPIx_MISO;
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStructure.Pull = GPIO_NOPULL;
	GPIO_InitStructure.Alternate = SPIx_MISO_AF;

	HAL_GPIO_Init(SPIx_GPIO, &GPIO_InitStructure);

	// SPIx CS pin setup
	GPIO_InitStructure.Pin = SPIx_CS;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStructure.Pull = GPIO_NOPULL;

	HAL_GPIO_Init(SPIx_CS_GPIO, &GPIO_InitStructure);
//
//	// Disable SPIx SS Output
//	SPI_SSOutputCmd(SPIx, DISABLE);
//
//	// Enable SPIx
//	SPI_Cmd(SPIx, ENABLE);
//
//	// Set CS high
//	GPIO_SetBits(SPIx_CS_GPIO, SPIx_CS);

	__HAL_SPI_ENABLE(&SPIx_Handle);

    return 0;
}

int GPIO_Configuration(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

	/* Configure all unused GPIO port pins in Analog Input mode (floating input
	* trigger OFF), this will reduce the power consumption and increase the device
	* immunity against EMI/EMC */

	__HAL_RCC_GPIOA_CLK_ENABLE();
	__HAL_RCC_GPIOB_CLK_ENABLE();

	// Enable GPIO used for LEDs
	GPIO_InitStructure.Pin = LEDRX;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	HAL_GPIO_Init(LEDRX_GPIO, &GPIO_InitStructure);

	GPIO_InitStructure.Pin = LEDTX;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	HAL_GPIO_Init(LEDTX_GPIO, &GPIO_InitStructure);

	GPIO_InitStructure.Pin = LEDL;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	HAL_GPIO_Init(LEDL_GPIO, &GPIO_InitStructure);




	GPIO_InitStructure.Pin = DEBUGRX;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	HAL_GPIO_Init(DEBUGRX_GPIO, &GPIO_InitStructure);

	GPIO_InitStructure.Pin = DEBUGTX;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	HAL_GPIO_Init(DEBUGTX_GPIO, &GPIO_InitStructure);

	GPIO_InitStructure.Pin = DEBUGMAIN;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	HAL_GPIO_Init(DEBUGMAIN_GPIO, &GPIO_InitStructure);

//	GPIO_PinRemapConfig(GPIO_Remap_SPI1, DISABLE);

    return 0;
}

void reset_DW1000(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

	// Enable GPIO used for DW1000 reset
	GPIO_InitStructure.Pin = DW1000_RSTn;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	HAL_GPIO_Init(DW1000_RSTn_GPIO, &GPIO_InitStructure);

	//drive the RSTn pin low
	HAL_GPIO_WritePin(DW1000_RSTn_GPIO, DW1000_RSTn, GPIO_PIN_RESET);

	//put the pin back to tri-state ... as input
	GPIO_InitStructure.Pin = DW1000_RSTn;
	GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	HAL_GPIO_Init(DW1000_RSTn_GPIO, &GPIO_InitStructure);

    sleep_ms(2);
}

void led_off (led_t led)
{
	switch (led)
	{
	case LED_RX:
		HAL_GPIO_WritePin(LEDRX_GPIO, LEDRX, GPIO_PIN_RESET);
		break;
	case LED_TX:
		HAL_GPIO_WritePin(LEDTX_GPIO, LEDTX, GPIO_PIN_RESET);
		break;
	case LED_L:
		HAL_GPIO_WritePin(LEDL_GPIO, LEDL, GPIO_PIN_RESET);
		break;
	case LED_ALL:
		HAL_GPIO_WritePin(LEDRX_GPIO, LEDRX, GPIO_PIN_RESET);
		HAL_GPIO_WritePin(LEDTX_GPIO, LEDTX, GPIO_PIN_RESET);
		HAL_GPIO_WritePin(LEDL_GPIO, LEDL, GPIO_PIN_RESET);
		break;
	default:
		// do nothing for undefined led number
		break;
	}
}

void led_on (led_t led)
{
	switch (led)
	{
	case LED_RX:
		HAL_GPIO_WritePin(LEDRX_GPIO, LEDRX, GPIO_PIN_SET);
		break;
	case LED_TX:
		HAL_GPIO_WritePin(LEDTX_GPIO, LEDTX, GPIO_PIN_SET);
		break;
	case LED_L:
		HAL_GPIO_WritePin(LEDL_GPIO, LEDL, GPIO_PIN_SET);
		break;
	case LED_ALL:
		HAL_GPIO_WritePin(LEDRX_GPIO, LEDRX, GPIO_PIN_SET);
		HAL_GPIO_WritePin(LEDTX_GPIO, LEDTX, GPIO_PIN_SET);
		HAL_GPIO_WritePin(LEDL_GPIO, LEDL, GPIO_PIN_SET);
		break;
	default:
		// do nothing for undefined led number
		break;
	}
}

void peripherals_init (void)
{
	HAL_Init();

	rcc_init();
	gpio_init();
	interrupt_init();
	systick_init();
	spi_init();
    usart_init();
//    usb_init();
}
